2007-04-24  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/script_playback.py: Added a quick fix for
	headless setups.

2007-04-24  Eitan Isaacson  <eitan@ascender.com>

	* README: Added gconf-dev as a requirement for builing from SVN.
	* plugins/ipython_view.py: * plugins/ipython_view.py: Fixed home
	and left key behavior (bug 431882).

2007-04-24  Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py: Fixed argv being None (bug 431878).

2007-04-23  Eitan Isaacson  <eitan@ascender.com>
	
	* plugins/api_view.py: Added localized name (bug 432832).
	* plugins/console.py: Added localized name (bug 432832).
	* plugins/event_monitor.py: Added localized name (bug 432832).
	* plugins/interface_view.py: Added localized name (bug 432832).
	* plugins/script_recorder.py: Added localized name (bug 432832).
	* src/lib/accerciser/accerciser.py: Provide localized component
	name in addHotKey().
	* src/lib/accerciser/hotkey_manager.py: Provide localized component
	name in addHotKey().
	* src/lib/accerciser/plugin_manager.py: Added data column for
	localized plugin name.

	* src/lib/accerciser/accerciser.py: Changed "Top right" to "Top Panel".
	* accerciser.schemas.in: Changed default layout to a list format in 
	/apps/accerciser/[view name]/layout (bug 432697).
	* src/lib/accerciser/plugin_manager.py: Changed layout to a list 
	format in /apps/accerciser/[view name]/layout (bug 432697).
	* src/lib/accerciser/tools.py: Added a wrapper class for gconf
	list entries.

	* src/lib/accerciser/tools.py: Removed obsolete constants and
	import line (bug 432423).
	
2007-04-19  Eitan Isaacson  <eitan@ascender.com>

	* plugins/Makefile.am: Added script_recorder.glade.
	* plugins/script_recorder.glade: Added.
	* plugins/script_recorder.py: Added script platform selection.
	* src/lib/accerciser/script_playback.py: Fixed some issues with
	application focusing.

	* README:
	* configure.in:
	* debian/changelog: Bumped to version 0.1.2.
	