@@ -1,3 +1,10 @@
+2007-05-05  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/interface_view.py: Changed set_select_function() to be
+	pygtk 2.8 compatable.
+	* src/lib/accerciser/accessible_treeview.py: Changed 
+	set_select_function() to be pygtk 2.8 compatable.
+
 2007-04-24  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/script_playback.py: Added a quick fix for
